# C_Degridder

./: CMakeLists.txt  LICENSE  README.md  degridder.c  degridder.h  main.cpp  unit_testing.cpp
